# napari-potential-field-navigation

./: .gitignore  .pre-commit-config.yaml  README.md  lung.ipynb  pyproject.toml  setup.cfg  tox.ini
src/napari_potential_field_navigation/: __init__.py  _a_star.py  _finite_difference.py  _sample_data.py  _scratch.py  _test_plugin.py  _use_case.py  _widget.py  fields.py  focused_walkers.py  geometries.py  lung.py  napari.yaml  simulations.py  visualize.py
src/napari_potential_field_navigation/_tests/: test_finite_difference.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
