[metadata]
name = napari-potential-field-navigation

description = A simple plugin for generating and visualizing trajectories in napari for lung navigation in CT scans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rcremese/napari-potential-field-navigation
author = Robin CREMESE
author_email = robin.cremese@gmail.com
license = MPL-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rcremese/napari-potential-field-navigation/issues
    Documentation = https://github.com/rcremese/napari-potential-field-navigation#README.md
    Source Code = https://github.com/rcremese/napari-potential-field-navigation
    User Support = https://github.com/rcremese/napari-potential-field-navigation/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    magicgui
    qtpy
    scikit-image
    napari-itk-io
    taichi

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-potential-field-navigation = napari_potential_field_navigation:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
